# test3

./: CMakeLists.txt
share_lib/: CMakeLists.txt  share.c
src/: main.c
static_lib/: CMakeLists.txt  static.c
